Add TomTom Maven repository to top-level build.gradle
Add TomTom Maven repository to top-level build.gradle

--- a/build.gradle
+++ b/build.gradle
@@ -18,8 +18,9 @@ allprojects {
     repositories {
         google()
         jcenter()
-        // Replace this line with the TomTom Maven repository
-
+        maven {
+            url "https://maven.tomtom.com:8443/nexus/content/repositories/releases/"
+        }
     }
 }
 
